--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    /*CHQ: I added the noImplicitAny*/
+    "noImplicitAny": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
